figma landing pg

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Figma Landing Page Design</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -373,22 +378,139 @@
       <div class="features2">
         <img src="installation.png" alt="installation" class="installation">
         <div class="content">
-        <h1>Embed it and forget it</h1>
-        <div class="checkpoints">
-          <p><img src="check.png" alt="check">Simple instalation. No developers needed</p>
-          <p><img src="check.png" alt="check">Embed on different CMS platforms</p>
-          <p><img src="check.png" alt="check">Auto sync new stories</p>
+          <h1>Embed it and forget it</h1>
+          <div class="checkpoints">
+            <p><img src="check.png" alt="check">Simple instalation. No developers needed</p>
+            <p><img src="check.png" alt="check">Embed on different CMS platforms</p>
+            <p><img src="check.png" alt="check">Auto sync new stories</p>
           </div>
-          
-<div class="mainimg">
-          <img src="features main image 2.png" alt="Main2" class="main2">
-</div>
+
+          <div class="mainimg">
+            <img src="features main image 2.png" alt="Main2" class="main2">
+          </div>
 
         </div>
       </div>
     </div>
   </section>
   <!-- ////FEATURES SECTION END//// -->
+
+  <!-- ////CTA SECTION START//// -->
+  <section class="cta">
+    <div class="wrapper">
+      <div class="content">
+        <h1>Ready to dive in? Create your widget today.</h1>
+        <p>
+          Display Instagram Stories Widget on your website, that auto-syncs,
+          and updates each time you add a photo in your active story.
+        </p>
+        <div class="search">
+          <input type="email" placeholder="Enter your email..." /><button>
+            Start Free Trial
+          </button>
+        </div>
+        <div class="paras">
+          <p>Free 7-day trial</p>
+          <img src="hero content small circle.png" alt="" />
+          <p>Easy setup</p>
+          <img src="hero content small circle.png" alt="" />
+          <p>Cancel any time</p>
+        </div>
+      </div>
+
+      <div class="right">
+        <div class="images">
+          <img src="cta kiwi.png" alt="kiwi">
+          <img src="cta pumpkin.png" alt="pumpkin">
+          <img src="cta avocado.png" alt="avocado">
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- ////CTA SECTION END//// -->
+
+  <!-- ////FEATURES 3 SECTION START//// -->
+   <section class="features3">
+    <div class="wrapper">
+
+      <div class="head">
+        <h1>Other features at your service</h1>
+      </div>
+
+<div class="grid">
+
+  <div class="box">
+    <img src="auto sync.png" alt="auto sync">
+    <h4>Auto-sync</h4>
+    <p>Sync all Instagram stories in a single click and create an widget that you can embed on any website.</p>
+  </div>
+
+  <div class="box">
+     <img src="responsive.png" alt="responsive">
+    <h4>Responsive</h4>
+    <p>Mobile-friendly, fully responsive, fits on every display: tablet, mobile, or desktop.</p>
+  </div>
+
+  <div class="box">
+     <img src="follow button.png" alt="follow button">
+    <h4>Follow button</h4>
+    <p>Show a Follow button with a link to your Instagram account to help you drive traffic and increase followers.</p>
+  </div>
+
+  <div class="box">
+     <img src="unlimited widgets.png" alt="unlimited widgets">
+    <h4>Unlimited widgets</h4>
+    <p>Create multiple widgets and embed feeds on various websites from multiple social media platforms.</p>
+  </div>
+
+  <div class="box">
+     <img src="localization.png" alt="localization">
+    <h4>Localization</h4>
+    <p>Use the 10+ languages available in the platform to localize the widget for your web visitors.</p>
+  </div>
+
+  <div class="box">
+     <img src="filters.png" alt="filters">
+    <h4>Filters (PRO)</h4>
+    <p>Use filters by date or keywords. Change the number of pages and post per page in your feed...</p>
+  </div>
+
+  <div class="box">
+     <img src="analytics.png" alt="analytics">
+    <h4>Analytics</h4>
+    <p>Know which Instagram story performs best and the total clicks of the entire widget on your website.</p>
+  </div>
+
+  <div class="box">
+    <h4>Custom CSS</h4>
+    <p>Variety of settings, filters, and a Custom CSS editor to style your social media widget entirely.</p>
+    <img src="custom css.png" alt="custom css">
+  </div>
+</div>
+ 
+    </div>
+    <img src="features 3 bottom text.png" alt="text" class="text">
+   </section>
+   <!-- ////FEATURES 3 SECTION END//// -->
+
+   <!-- ////SOCIAL PROOF VIDEO SECTION START//// -->
+    <section class="socialvideo">
+      <div class="wrapper">
+
+        <div class="content">
+          <h1>It was love at first story</h1>
+          <p>“Great plugin and amazing support. I trialed several plugins that try to accomplish the same thing. None of them did it as beautifully and as simple as EmbedStories”</p>
+          <p class="credits">Bertha Jo, CEO at jacole</p>
+          <p class="jacole">jacole</p>
+        </div>
+
+        <div class="image">
+          <img src="social proof video image.png" alt="social proof video">
+        </div>
+      </div>
+    </section>
+    <!-- ////SOCIAL PROOF VIDEO SECTION END//// -->
 </body>
 
 </html>
