figma landing pg

--- a/index.html
+++ b/index.html
@@ -511,6 +511,87 @@
       </div>
     </section>
     <!-- ////SOCIAL PROOF VIDEO SECTION END//// -->
+
+    <!-- ////SOCIAL PROOF REVIEWS SECTION START//// -->
+     <section class="socialreview">
+      <div class="wrapper">
+
+        <div class="head">
+          <h1>Our customers love EmbedStories</h1>
+          <p>Rated 4.8 by our customers on Facebook and Google</p>
+        </div>
+
+        <div class="grid">
+
+          <div class="box">
+            <img src="terry dias.png" alt="terry dias">
+            <h4>Terry Dias</h4>
+            <img src="five stars.png" alt="">
+            <p>I just signed up for a trial and within a couple of hours had a brand new customer testimonials page built on our website as well as sliders...</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="james workman.png" alt="james workman">
+            <h4>James Workman</h4>
+            <img src="five stars.png" alt="">
+            <p>Seriously impressed by Embed Social.Good job making the app so easy to use.</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="ahmed vacarroo.png" alt="ahmed vaccaro">
+            <h4>Ahmed Vaccaro</h4>
+            <img src="five stars.png" alt="">
+            <p>Emebed Social and their services is just perfect ! It has made my business life so much easier ! 5 stars!</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="allison culhane.png" alt="allison culhane">
+            <h4>Allison Culhane</h4>
+            <img src="five stars.png" alt="">
+            <p>Awesome products, Superior human support.</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="davis herwitz.png" alt="davis herwitz">
+            <h4>Davis Herwitz</h4>
+            <img src="five stars.png" alt="">
+            <p>I've been on the look out for lots of companies to do what they do, and I've never found any company who are so quick to get in touch and...</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="jessie grant.png" alt="jessie grant">
+            <h4>Jessie Grant</h4>
+            <img src="five stars.png" alt="">
+            <p>Very impressed. 5 stars!</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="john smith.png" alt="john smith">
+            <h4>John Smith</h4>
+            <img src="five stars.png" alt="">
+            <p>Our experience with EmbedStories is very good, very solid, loads fast, looks good.</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+          <div class="box">
+            <img src="benefits man image.png" alt="ben calahan">
+            <h4>Ben Calahan,<span>COO at Clovin</span></h4>
+            <img src="five stars.png" alt="">
+            <p>Storytelling on another level. EmbedStories is great - it takes pride of place on our homepage...</p>
+            <img src="2 weeks ago.png" alt="">
+          </div>
+
+        </div>
+<img src="social review end text.png" alt="embed social" class="text">
+      </div>
+     </section>
+      <!-- ////SOCIAL PROOF REVIEWS SECTION END//// -->
 </body>
 
 </html>
