figma landing pg

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -431,167 +432,228 @@
   <!-- ////CTA SECTION END//// -->
 
   <!-- ////FEATURES 3 SECTION START//// -->
-   <section class="features3">
+  <section class="features3">
     <div class="wrapper">
 
       <div class="head">
         <h1>Other features at your service</h1>
       </div>
 
-<div class="grid">
+      <div class="grid">
 
-  <div class="box">
-    <img src="auto sync.png" alt="auto sync">
-    <h4>Auto-sync</h4>
-    <p>Sync all Instagram stories in a single click and create an widget that you can embed on any website.</p>
-  </div>
+        <div class="box">
+          <img src="auto sync.png" alt="auto sync">
+          <h4>Auto-sync</h4>
+          <p>Sync all Instagram stories in a single click and create an widget that you can embed on any website.</p>
+        </div>
 
-  <div class="box">
-     <img src="responsive.png" alt="responsive">
-    <h4>Responsive</h4>
-    <p>Mobile-friendly, fully responsive, fits on every display: tablet, mobile, or desktop.</p>
-  </div>
+        <div class="box">
+          <img src="responsive.png" alt="responsive">
+          <h4>Responsive</h4>
+          <p>Mobile-friendly, fully responsive, fits on every display: tablet, mobile, or desktop.</p>
+        </div>
 
-  <div class="box">
-     <img src="follow button.png" alt="follow button">
-    <h4>Follow button</h4>
-    <p>Show a Follow button with a link to your Instagram account to help you drive traffic and increase followers.</p>
-  </div>
+        <div class="box">
+          <img src="follow button.png" alt="follow button">
+          <h4>Follow button</h4>
+          <p>Show a Follow button with a link to your Instagram account to help you drive traffic and increase
+            followers.</p>
+        </div>
 
-  <div class="box">
-     <img src="unlimited widgets.png" alt="unlimited widgets">
-    <h4>Unlimited widgets</h4>
-    <p>Create multiple widgets and embed feeds on various websites from multiple social media platforms.</p>
-  </div>
+        <div class="box">
+          <img src="unlimited widgets.png" alt="unlimited widgets">
+          <h4>Unlimited widgets</h4>
+          <p>Create multiple widgets and embed feeds on various websites from multiple social media platforms.</p>
+        </div>
 
-  <div class="box">
-     <img src="localization.png" alt="localization">
-    <h4>Localization</h4>
-    <p>Use the 10+ languages available in the platform to localize the widget for your web visitors.</p>
-  </div>
+        <div class="box">
+          <img src="localization.png" alt="localization">
+          <h4>Localization</h4>
+          <p>Use the 10+ languages available in the platform to localize the widget for your web visitors.</p>
+        </div>
 
-  <div class="box">
-     <img src="filters.png" alt="filters">
-    <h4>Filters (PRO)</h4>
-    <p>Use filters by date or keywords. Change the number of pages and post per page in your feed...</p>
-  </div>
+        <div class="box">
+          <img src="filters.png" alt="filters">
+          <h4>Filters (PRO)</h4>
+          <p>Use filters by date or keywords. Change the number of pages and post per page in your feed...</p>
+        </div>
 
-  <div class="box">
-     <img src="analytics.png" alt="analytics">
-    <h4>Analytics</h4>
-    <p>Know which Instagram story performs best and the total clicks of the entire widget on your website.</p>
-  </div>
+        <div class="box">
+          <img src="analytics.png" alt="analytics">
+          <h4>Analytics</h4>
+          <p>Know which Instagram story performs best and the total clicks of the entire widget on your website.</p>
+        </div>
 
-  <div class="box">
-    <h4>Custom CSS</h4>
-    <p>Variety of settings, filters, and a Custom CSS editor to style your social media widget entirely.</p>
-    <img src="custom css.png" alt="custom css">
-  </div>
-</div>
- 
+        <div class="box">
+          <h4>Custom CSS</h4>
+          <p>Variety of settings, filters, and a Custom CSS editor to style your social media widget entirely.</p>
+          <img src="custom css.png" alt="custom css">
+        </div>
+      </div>
+
     </div>
     <img src="features 3 bottom text.png" alt="text" class="text">
-   </section>
-   <!-- ////FEATURES 3 SECTION END//// -->
+  </section>
+  <!-- ////FEATURES 3 SECTION END//// -->
 
-   <!-- ////SOCIAL PROOF VIDEO SECTION START//// -->
-    <section class="socialvideo">
-      <div class="wrapper">
+  <!-- ////SOCIAL PROOF VIDEO SECTION START//// -->
+  <section class="socialvideo">
+    <div class="wrapper">
 
-        <div class="content">
-          <h1>It was love at first story</h1>
-          <p>“Great plugin and amazing support. I trialed several plugins that try to accomplish the same thing. None of them did it as beautifully and as simple as EmbedStories”</p>
-          <p class="credits">Bertha Jo, CEO at jacole</p>
-          <p class="jacole">jacole</p>
+      <div class="content">
+        <h1>It was love at first story</h1>
+        <p>“Great plugin and amazing support. I trialed several plugins that try to accomplish the same thing. None of
+          them did it as beautifully and as simple as EmbedStories”</p>
+        <p class="credits">Bertha Jo, CEO at jacole</p>
+        <p class="jacole">jacole</p>
+      </div>
+
+      <div class="image">
+        <img src="social proof video image.png" alt="social proof video">
+      </div>
+    </div>
+  </section>
+  <!-- ////SOCIAL PROOF VIDEO SECTION END//// -->
+
+  <!-- ////SOCIAL PROOF REVIEWS SECTION START//// -->
+  <section class="socialreview">
+    <div class="wrapper">
+
+      <div class="head">
+        <h1>Our customers love EmbedStories</h1>
+        <p>Rated 4.8 by our customers on Facebook and Google</p>
+      </div>
+
+      <div class="grid">
+
+        <div class="box">
+          <img src="terry dias.png" alt="terry dias">
+          <h4>Terry Dias</h4>
+          <img src="five stars.png" alt="">
+          <p>I just signed up for a trial and within a couple of hours had a brand new customer testimonials page built
+            on our website as well as sliders...</p>
+          <img src="2 weeks ago.png" alt="">
         </div>
 
+        <div class="box">
+          <img src="james workman.png" alt="james workman">
+          <h4>James Workman</h4>
+          <img src="five stars.png" alt="">
+          <p>Seriously impressed by Embed Social.Good job making the app so easy to use.</p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+        <div class="box">
+          <img src="ahmed vacarroo.png" alt="ahmed vaccaro">
+          <h4>Ahmed Vaccaro</h4>
+          <img src="five stars.png" alt="">
+          <p>Emebed Social and their services is just perfect ! It has made my business life so much easier ! 5 stars!
+          </p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+        <div class="box">
+          <img src="allison culhane.png" alt="allison culhane">
+          <h4>Allison Culhane</h4>
+          <img src="five stars.png" alt="">
+          <p>Awesome products, Superior human support.</p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+        <div class="box">
+          <img src="davis herwitz.png" alt="davis herwitz">
+          <h4>Davis Herwitz</h4>
+          <img src="five stars.png" alt="">
+          <p>I've been on the look out for lots of companies to do what they do, and I've never found any company who
+            are so quick to get in touch and...</p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+        <div class="box">
+          <img src="jessie grant.png" alt="jessie grant">
+          <h4>Jessie Grant</h4>
+          <img src="five stars.png" alt="">
+          <p>Very impressed. 5 stars!</p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+        <div class="box">
+          <img src="john smith.png" alt="john smith">
+          <h4>John Smith</h4>
+          <img src="five stars.png" alt="">
+          <p>Our experience with EmbedStories is very good, very solid, loads fast, looks good.</p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+        <div class="box">
+          <img src="benefits man image.png" alt="ben calahan">
+          <h4>Ben Calahan,<span>COO at Clovin</span></h4>
+          <img src="five stars.png" alt="">
+          <p>Storytelling on another level. EmbedStories is great - it takes pride of place on our homepage...</p>
+          <img src="2 weeks ago.png" alt="">
+        </div>
+
+      </div>
+      <img src="social review end text.png" alt="embed social" class="text">
+    </div>
+  </section>
+  <!-- ////SOCIAL PROOF REVIEWS SECTION END//// -->
+
+  <!-- ////SERVICES SECTION START//// -->
+  <section class="services">
+    <div class="wrapper">
+
+      <div class="heading">
+        <h1>More than just a widget.A complete <mark>Stories Platform.</mark></h1>
+      </div>
+
+      <div class="part1">
         <div class="image">
-          <img src="social proof video image.png" alt="social proof video">
+          <img src="part1 image.png" alt="">
+        </div>
+        <div class="content">
+          <img src="part 1 btn.png" alt="">
+          <h3>Make your Instagram Stories, Shoppable</h3>
+          <p><img src="check.png" alt="">Use the Call to Acton feature and add buy links to the Instagram stories</p>
+          <p><img src="check.png" alt="">Allow your web visitors to interact and directly buy the product showcased in
+            the Instagram story.</p>
         </div>
       </div>
-    </section>
-    <!-- ////SOCIAL PROOF VIDEO SECTION END//// -->
 
-    <!-- ////SOCIAL PROOF REVIEWS SECTION START//// -->
-     <section class="socialreview">
-      <div class="wrapper">
-
-        <div class="head">
-          <h1>Our customers love EmbedStories</h1>
-          <p>Rated 4.8 by our customers on Facebook and Google</p>
+      <div class="part2">
+        <div class="content">
+          <img src="part 2 btn.png" alt="">
+          <h3>Boost your Instagram stories with few clicks</h3>
+          <p><img src="check.png" alt="">Create Instagram Story Ads in just a few clicks</p>
+          <p><img src="check.png" alt="">Archive Instagram Stories with EmbesStories and re-use them for Instagram Ads.
+          </p>
+          <p><img src="check.png" alt=""><b>This is an option that is not available in the Facebook Ads Manager. </b>
+          </p>
         </div>
-
-        <div class="grid">
-
-          <div class="box">
-            <img src="terry dias.png" alt="terry dias">
-            <h4>Terry Dias</h4>
-            <img src="five stars.png" alt="">
-            <p>I just signed up for a trial and within a couple of hours had a brand new customer testimonials page built on our website as well as sliders...</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="james workman.png" alt="james workman">
-            <h4>James Workman</h4>
-            <img src="five stars.png" alt="">
-            <p>Seriously impressed by Embed Social.Good job making the app so easy to use.</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="ahmed vacarroo.png" alt="ahmed vaccaro">
-            <h4>Ahmed Vaccaro</h4>
-            <img src="five stars.png" alt="">
-            <p>Emebed Social and their services is just perfect ! It has made my business life so much easier ! 5 stars!</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="allison culhane.png" alt="allison culhane">
-            <h4>Allison Culhane</h4>
-            <img src="five stars.png" alt="">
-            <p>Awesome products, Superior human support.</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="davis herwitz.png" alt="davis herwitz">
-            <h4>Davis Herwitz</h4>
-            <img src="five stars.png" alt="">
-            <p>I've been on the look out for lots of companies to do what they do, and I've never found any company who are so quick to get in touch and...</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="jessie grant.png" alt="jessie grant">
-            <h4>Jessie Grant</h4>
-            <img src="five stars.png" alt="">
-            <p>Very impressed. 5 stars!</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="john smith.png" alt="john smith">
-            <h4>John Smith</h4>
-            <img src="five stars.png" alt="">
-            <p>Our experience with EmbedStories is very good, very solid, loads fast, looks good.</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
-          <div class="box">
-            <img src="benefits man image.png" alt="ben calahan">
-            <h4>Ben Calahan,<span>COO at Clovin</span></h4>
-            <img src="five stars.png" alt="">
-            <p>Storytelling on another level. EmbedStories is great - it takes pride of place on our homepage...</p>
-            <img src="2 weeks ago.png" alt="">
-          </div>
-
+        <div class="image">
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
         </div>
-<img src="social review end text.png" alt="embed social" class="text">
       </div>
-     </section>
-      <!-- ////SOCIAL PROOF REVIEWS SECTION END//// -->
+
+      <div class="part3">
+        <div class="image">
+          <img src="" alt="">
+          <img src="" alt="">
+        </div>
+        <div class="content">
+          <img src="part 3 btn.png" alt="">
+          <h3>Create. Analyze. Grow.</h3>
+          <p><img src="check.png" alt="">Analyze conversions, clicks, views</p>
+          <p><img src="check.png" alt="">Compare metrics between products</p>
+          <p><img src="check.png" alt="">See the direct effect.</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- ////SERVICES SECTION END//// -->
 </body>
 
 </html>
