figma landing pg

--- a/index.html
+++ b/index.html
@@ -604,7 +604,8 @@
     <div class="wrapper">
 
       <div class="heading">
-        <h1>More than just a widget.A complete <mark>Stories Platform.</mark></h1>
+        <h1>More than just a widget.</h1>
+        <h1>A complete <mark>Stories Platform.</mark></h1>
       </div>
 
       <div class="part1">
@@ -631,16 +632,16 @@
           </p>
         </div>
         <div class="image">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
+          <img src="part 2,3 back image.png" alt="" class="img1">
+          <img src="part 2 front image.png" alt="" class="img2">
+          <img src="hero image instagram icon.png" alt="" class="img3">
         </div>
       </div>
 
       <div class="part3">
         <div class="image">
-          <img src="" alt="">
-          <img src="" alt="">
+          <img src="part 2,3 back image.png" alt="" class="img1">
+          <img src="part 3 front image.png" alt="" class="img2">
         </div>
         <div class="content">
           <img src="part 3 btn.png" alt="">
@@ -654,6 +655,81 @@
     </div>
   </section>
   <!-- ////SERVICES SECTION END//// -->
+
+  <!-- ////PRICING SECTION START//// -->
+  <section class="pricing">
+    <div class="wrapper">
+
+      <div class="head">
+        <h1>Try all EmbedStories features 7 days free.</h1>
+        <p>Reach more with your Instagram stories.</p>
+        <div class="btns">
+          <button class="fill">Annually,save 20%</button>
+          <button class="border">Monthly</button>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="card1">
+          <h3>FREE</h3>
+          <p>$0/month</p>
+          <button>Start Using For Free</button>
+          <p style="text-decoration: underline;"><img src="check.png" alt=""><b>1 Instagram Business account</b></p>
+          <p><img src="check.png" alt="">Auto Update</p>
+          <del><img src="gray check.png" alt="">Unlimited Story Widgets</del>
+          <del><img src="gray check.png" alt="">Unlimited Galleries</del>
+          <del><img src="gray check.png" alt="">Multiple Layouts & Options</del>
+          <del><img src="gray check.png" alt="">Convert to AMP Format</del>
+          <del><img src="gray check.png" alt="">API Access</del>
+          <del><img src="gray check.png" alt="">Team Sub Accounts</del>
+          <del><img src="gray check.png" alt="">Advance Analytics</del>
+        </div>
+        <div class="card2">
+          <h3>PRO</h3>
+          <p>$29/month</p>
+          <button>Try Free For 7 Days</button>
+          <p style="text-decoration: underline;"><img src="check.png" alt=""><b>1 Instagram Business account</b></p>
+          <p><img src="check.png" alt="">Auto Update</p>
+          <p><img src="check.png" alt="">Unlimited Story Widgets</p>
+          <p><img src="check.png" alt="">Unlimited Galleries</p>
+          <p><img src="check.png" alt="">Multiple Layouts & Options</p>
+          <p><img src="check.png" alt="">Convert to AMP Format</p>
+          <p><img src="check.png" alt="">API Access</p>
+          <del><img src="gray check.png" alt="">Team Sub Accounts</del>
+          <del><img src="gray check.png" alt="">Advance Analytics</del>
+        </div>
+      </div>
+      <div class="card3">
+        <h3>PRO Plus</h3>
+        <p>$49/month</p>
+        <button>Try Free For 7 Days</button>
+        <p style="text-decoration: underline;"><img src="check.png" alt=""><b>3 Instagram Business account</b></p>
+        <p><img src="check.png" alt="">Auto Update</p>
+        <p><img src="check.png" alt="">Unlimited Story Widgets</p>
+        <p><img src="check.png" alt="">Unlimited Galleries</p>
+        <p><img src="check.png" alt="">Multiple Layouts & Options</p>
+        <p><img src="check.png" alt="">Convert to AMP Format</p>
+        <p><img src="check.png" alt="">API Access</p>
+        <del><img src="gray check.png" alt="">Team Sub Accounts</del>
+        <del><img src="gray check.png" alt="">Advance Analytics</del>
+      </div>
+      <div class="card4">
+        <h3>PREMIUM</h3>
+        <p>$99/month</p>
+        <button>Try Free For 7 Days</button>
+        <p style="text-decoration: underline;"><img src="check.png" alt=""><b>10 Instagram Business account</b></p>
+        <p><img src="check.png" alt="">Auto Update</p>
+        <p><img src="check.png" alt="">Unlimited Story Widgets</p>
+        <p><img src="check.png" alt="">Unlimited Galleries</p>
+        <p><img src="check.png" alt="">Multiple Layouts & Options</p>
+        <p><img src="check.png" alt="">Convert to AMP Format</p>
+        <p><img src="check.png" alt="">API Access</p>
+        <p><img src="check.png" alt="">Team Sub Accounts</p>
+        <p><img src="check.png" alt="">Advance Analytics</p>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!-- ////PRICING SECTION END//// -->
 </body>
 
 </html>
