figma landing pg

--- a/index.html
+++ b/index.html
@@ -664,28 +664,28 @@
         <h1>Try all EmbedStories features 7 days free.</h1>
         <p>Reach more with your Instagram stories.</p>
         <div class="btns">
-          <button class="fill">Annually,save 20%</button>
-          <button class="border">Monthly</button>
+          <button class="btn1">Annually,save 20%</button>
+          <button class="btn2">Monthly</button>
         </div>
       </div>
       <div class="cards">
         <div class="card1">
           <h3>FREE</h3>
-          <p>$0/month</p>
+          <p class="price">$0<span>/month</span></p>
           <button>Start Using For Free</button>
           <p style="text-decoration: underline;"><img src="check.png" alt=""><b>1 Instagram Business account</b></p>
           <p><img src="check.png" alt="">Auto Update</p>
-          <del><img src="gray check.png" alt="">Unlimited Story Widgets</del>
-          <del><img src="gray check.png" alt="">Unlimited Galleries</del>
-          <del><img src="gray check.png" alt="">Multiple Layouts & Options</del>
-          <del><img src="gray check.png" alt="">Convert to AMP Format</del>
-          <del><img src="gray check.png" alt="">API Access</del>
-          <del><img src="gray check.png" alt="">Team Sub Accounts</del>
-          <del><img src="gray check.png" alt="">Advance Analytics</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Unlimited Story Widgets</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Unlimited Galleries</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Multiple Layouts & Options</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Convert to AMP Format</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">API Access</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Team Sub Accounts</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Advance Analytics</del>
         </div>
         <div class="card2">
           <h3>PRO</h3>
-          <p>$29/month</p>
+          <p class="price">$29<span>/month</span></p>
           <button>Try Free For 7 Days</button>
           <p style="text-decoration: underline;"><img src="check.png" alt=""><b>1 Instagram Business account</b></p>
           <p><img src="check.png" alt="">Auto Update</p>
@@ -694,42 +694,170 @@
           <p><img src="check.png" alt="">Multiple Layouts & Options</p>
           <p><img src="check.png" alt="">Convert to AMP Format</p>
           <p><img src="check.png" alt="">API Access</p>
-          <del><img src="gray check.png" alt="">Team Sub Accounts</del>
-          <del><img src="gray check.png" alt="">Advance Analytics</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Team Sub Accounts</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Advance Analytics</del>
+        </div>
+        <div class="card3">
+          <h3>PRO Plus</h3>
+          <p class="price">$49<span>/month</span></p>
+          <button>Try Free For 7 Days</button>
+          <p style="text-decoration: underline;"><img src="check.png" alt=""><b>3 Instagram Business account</b></p>
+          <p><img src="check.png" alt="">Auto Update</p>
+          <p><img src="check.png" alt="">Unlimited Story Widgets</p>
+          <p><img src="check.png" alt="">Unlimited Galleries</p>
+          <p><img src="check.png" alt="">Multiple Layouts & Options</p>
+          <p><img src="check.png" alt="">Convert to AMP Format</p>
+          <p><img src="check.png" alt="">API Access</p>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Team Sub Accounts</del>
+          <del style="color: rgba(156, 160, 172, 1);"><img src="gray check.png" alt="">Advance Analytics</del>
+        </div>
+        <div class="card4">
+          <h3>PREMIUM</h3>
+          <p class="price">$99<span>/month</span></p>
+          <button>Try Free For 7 Days</button>
+          <p style="text-decoration: underline;"><img src="check.png" alt=""><b>10 Instagram Business account</b></p>
+          <p><img src="check.png" alt="">Auto Update</p>
+          <p><img src="check.png" alt="">Unlimited Story Widgets</p>
+          <p><img src="check.png" alt="">Unlimited Galleries</p>
+          <p><img src="check.png" alt="">Multiple Layouts & Options</p>
+          <p><img src="check.png" alt="">Convert to AMP Format</p>
+          <p><img src="check.png" alt="">API Access</p>
+          <p><img src="check.png" alt="">Team Sub Accounts</p>
+          <p><img src="check.png" alt="">Advance Analytics</p>
+        </div>
+
+
+      </div>
+      <div class="faq">
+        <h1>Frequently Asked Questions</h1>
+        <p class="para">Have a specific question? Check out our Support Center</p>
+
+        <div class="questions">
+          <div class="box">
+            <h3>Question1 <img src="angle-down.png" alt=""></h3>
+            <p class="ans">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque in
+              odit architecto nesciunt unde? Facere repudiandae dignissimos repellat atque?</p>
+          </div>
+          <hr>
+          <div class="box">
+            <h3>Question2 <img src="angle-down.png" alt=""></h3>
+            <p class="ans">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque in
+              odit architecto nesciunt unde? Facere repudiandae dignissimos repellat atque?</p>
+          </div>
+          <hr>
+          <div class="box">
+            <h3>Question3 <img src="angle-down.png" alt=""></h3>
+            <p class="ans">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque in
+              odit architecto nesciunt unde? Facere repudiandae dignissimos repellat atque?</p>
+          </div>
+          <hr>
+          <div class="box">
+            <h3>Question4 <img src="angle-down.png" alt=""></h3>
+            <p class="ans">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque in
+              odit architecto nesciunt unde? Facere repudiandae dignissimos repellat atque?</p>
+          </div>
         </div>
       </div>
-      <div class="card3">
-        <h3>PRO Plus</h3>
-        <p>$49/month</p>
-        <button>Try Free For 7 Days</button>
-        <p style="text-decoration: underline;"><img src="check.png" alt=""><b>3 Instagram Business account</b></p>
-        <p><img src="check.png" alt="">Auto Update</p>
-        <p><img src="check.png" alt="">Unlimited Story Widgets</p>
-        <p><img src="check.png" alt="">Unlimited Galleries</p>
-        <p><img src="check.png" alt="">Multiple Layouts & Options</p>
-        <p><img src="check.png" alt="">Convert to AMP Format</p>
-        <p><img src="check.png" alt="">API Access</p>
-        <del><img src="gray check.png" alt="">Team Sub Accounts</del>
-        <del><img src="gray check.png" alt="">Advance Analytics</del>
-      </div>
-      <div class="card4">
-        <h3>PREMIUM</h3>
-        <p>$99/month</p>
-        <button>Try Free For 7 Days</button>
-        <p style="text-decoration: underline;"><img src="check.png" alt=""><b>10 Instagram Business account</b></p>
-        <p><img src="check.png" alt="">Auto Update</p>
-        <p><img src="check.png" alt="">Unlimited Story Widgets</p>
-        <p><img src="check.png" alt="">Unlimited Galleries</p>
-        <p><img src="check.png" alt="">Multiple Layouts & Options</p>
-        <p><img src="check.png" alt="">Convert to AMP Format</p>
-        <p><img src="check.png" alt="">API Access</p>
-        <p><img src="check.png" alt="">Team Sub Accounts</p>
-        <p><img src="check.png" alt="">Advance Analytics</p>
-      </div>
-    </div>
     </div>
   </section>
   <!-- ////PRICING SECTION END//// -->
+
+  <!-- ////SOCIAL PROOF SECTION START//// -->
+  <section class="proof">
+    <div class="wrapper">
+      <h1>From the <mark>creators of EmbedSocial</mark> trusted and displayed on 50,000+ websites</h1>
+      <img src="social proof logos.png" alt="social proof">
+    </div>
+  </section>
+  <!-- ////SOCIAL PROOF SECTION END//// -->
+
+  <!-- ////FOOTER START//// -->
+  <footer>
+    <div class="wrapper">
+      <div class="head">
+        <h1>Ready to dive in?</h1>
+        <h1>Create your widget today.</h1>
+        <p>
+          Display Instagram Stories Widget on your website, that auto-syncs,
+          and updates each time you add a photo in your active story.
+        </p>
+        <div class="search">
+          <input type="email" placeholder="Enter your email..." /><button>
+            Start Free Trial
+          </button>
+        </div>
+        <div class="paras">
+          <p>Free 7-day trial</p>
+          <img src="hero content small circle.png" alt="" />
+          <p>Easy setup</p>
+          <img src="hero content small circle.png" alt="" />
+          <p>Cancel any time</p>
+
+        </div>
+      </div>
+
+
+      <div class="blackbox">
+        <div class="columns">
+          <h3><img src="footer logo.png" alt="Logo"></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id rhoncus suspendisse mattis ultricies
+            adipiscing quam pretium eleifend. </p>
+
+        </div>
+        <div class="columns">
+          <h3>Product</h3>
+          <ul>
+            <li>Reviews management</li>
+            <li>Embed Instagram stories</li>
+            <li>Display Instagram feeds</li>
+            <li>Collect reviews</li>
+            <li>Send email requests</li>
+
+          </ul>
+
+        </div>
+        <div class="columns">
+          <h3>Company</h3>
+          <ul>
+            <li>Reviews management</li>
+            <li>Embed Instagram stories</li>
+            <li>Display Instagram feeds</li>
+            <li>Collect reviews</li>
+            <li>Send email requests</li>
+
+          </ul>
+
+        </div>
+        <div class="columns">
+          <h3>Integrations</h3>
+          <ul>
+            <li>Reviews management</li>
+            <li>Embed Instagram stories</li>
+            <li>Display Instagram feeds</li>
+            <li>Collect reviews</li>
+            <li>Send email requests</li>
+            <li>Collect reviews</li>
+            <li>Send email requests</li>
+
+          </ul>
+        </div>
+        <div class="columns">
+          <h3>Integrations</h3>
+          <ul>
+            <li>Reviews management</li>
+            <li>Embed Instagram stories</li>
+            <li>Display Instagram feeds</li>
+            <li>Collect reviews</li>
+            <li>Send email requests</li>
+            <li>Collect reviews</li>
+            <li>Send email requests</li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- ////FOOTER END//// -->
 </body>
 
 </html>
